# libstargazer

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_win  README.md
cmake/: cpack_options.cmake.in  stargazer-config.cmake.in
include/: CMakeLists.txt  StarGazer_impl.h  stargazer.h
src/: CMakeLists.txt  StarGazer_impl.cpp  demo.c  stargazer.c  stargazer.cpp
